--- a/package.json
+++ b/package.json
@@ -11,12 +11,13 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/cloudflare": "^7.0.1",
-    "@astrojs/preact": "^3.0.0",
-    "@astrojs/tailwind": "^5.0.0",
-    "@preact/signals": "^1.2.1",
-    "astro": "^3.0.7",
-    "preact": "^10.17.1",
-    "tailwindcss": "^3.3.3"
+    "@astrojs/cloudflare": "^7.7.1",
+    "@astrojs/preact": "^3.4.0",
+    "@astrojs/tailwind": "^5.1.0",
+    "@preact/signals": "^1.2.3",
+    "astro": "^4.10.2",
+    "preact": "^10.22.0",
+    "tailwindcss": "^3.4.4",
+    "typescript": "^5.4.5"
   }
 }
